2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Project.cs: Fix problem with reading empty action groups.

2007-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/GeneratorContext.cs: IconLoader must be an internal class.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Action.cs: Generate initialization of the Active
	  and DrawAsRadio properties. They are not generated by default
	  because they belong to a Gtk.Action subclass. Fixes bug #81785.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/Project.cs: Added method
	  for getting all widget types included in a project.
	* libstetic/wrapper/objects.xml: Gtk.Bin now inherits the properties of
	  Gtk.Container.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilClassDescriptor.cs: Added missing null check when
	  checking for base classes in FindEvent.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am: Added reference
	  to glib.
	* libsteticui/WidgetActionBar.cs, libstetic/CommandDescriptor.cs: Use
	  Menu size for command icons.
	* libsteticui/WidgetTreeCombo.cs: Replaced the popup widget menu by a
	  popup widget tree view. Fixes bug #81762.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Window.cs: Store the WindowPosition property in the
	  Window wrapper, since it may sometimes be changed by the embedder
	  widget.
	* libstetic/wrapper/objects.xml: Added default value for Widget.Events
	  property.
	* libstetic/wrapper/Dialog.cs: (Wrap) Don't initialize the HasSeparator
	  property if the provided instance is already initialized.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuBar.cs, libstetic/editor/ActionMenu.cs:
	  When a menu bar loses the focus, reset the menu item selection
	  before hiding the submenus. Fixes bug #81761.
